tests/parser-test-files/bad-files/parse-lisp.1.error
error: Malformed lisp expression
  --> test:4:15
   |
 4 |  (define f (lisp))
   |                 ^ expected expression type
